# connect-four-ai

./: .gitignore  README.md  SPEC.md  build.sh  setup.sh
computer-vision/: calibration.json  calibration.py  detection.py  pyproject.toml
documentation/: connect-four-ai.md  software-setup.md
python-demo/src/connect_four/: board.py
robot-game/: ROBOTREADME.md  calibration.py  detection.py  game.py  main.py  nfc_scanner.py  pyproject.toml  realsense_test.py  robot_simulator.py  robotconfig.json  send_pose.py  test_socket_client.py
