[project]
name = "connect-four-robot"
version = "0.1.0"
description = "Computer vision calibration, board detection and robot interaction logic for Connect Four"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "dearpygui>=1.10.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["calibration.py", "detection.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
